src/test/ui/macros/macro-use-scope.stderr
error: compilation successful
  --> $DIR/macro-use-scope.rs:32:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

